--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <div class="layer">
                     <h3>Movie recommender system</h3>
                     <p> A movie recommender system suggests films based on user preferences using content-based filtering (e.g., genres or actors) and other techniques. Key steps include data collection, model training, and evaluation with metrics like precision or RMSE</p>
-                        <a href="https://github.com/ErMosahid/movie_recomender_system"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://movie-mkn1.onrender.com"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
 
