--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <div class="tab-contents" id="experience">
     <ul>
-        <li><span>2023 - current</span><br>Data Analyst at gaaubesi private ltd (kathmandu)</li>
+        <li><span>2023 - current</span><br>Data Analyst at gaaubesi Logistics private ltd (kathmandu)</li>
         <li><span>2022 - 2023</span><br>IT Support Engineer at Qatar airways (Qatar)</li>
         <li><span>2019 - 2020</span><br>Data Analyst at Ingor info private ltd (Bangalore)</li>
         
