--- a/blogs.html
+++ b/blogs.html
@@ -14,7 +14,7 @@
         <nav>
             <img src="images/logo1.png" class="logo">
             <ul>
-              <li><a href="https://ermosahid.github.io/website-lunch/index.html#header" class="active">Home</a></li>
+              <li><a href="https://ermosahid.github.io/website-lunch/index.html#header">Home</a></li>
 
                 <li><a href="file:///D:/my%20folder/portfolio/portfilo/index.html#about">About</a></li>
                 <li><a href="file:///D:/my%20folder/portfolio/portfilo/index.html#services">Work Experience</a></li>
