--- a/blogs.html
+++ b/blogs.html
@@ -20,7 +20,7 @@
                 <li><a href="file:///D:/my%20folder/portfolio/portfilo/index.html#services">Work Experience</a></li>
                 <li><a href="file:///D:/my%20folder/portfolio/portfilo/index.html#Portfolio">Projects</a></li>
                 <li><a href="file:///D:/my%20folder/portfolio/portfilo/index.html#Contact">Contact</a></li>
-                <li><a href="blogs.html" class="active">Blogs</a></li> <!-- Active link for Blogs -->
+                <li><a href="https://ermosahid.github.io/website-lunch/blogs.html" class="active">Blogs</a></li> <!-- Active link for Blogs -->
             </ul>
         </nav>
     </div>
