--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Work Experience</a></li>
                 <li><a href="#Portfolio">Projects</a></li>
-                <li><a href="https://ermosahid.github.io/website-lunch/blogs.html class="active">Blogs</a></li>
+                <li><a href="https://ermosahid.github.io/website-lunch/blogs.html" class="active">Blogs</a></li>
                 <li><a href="#Contact">Contact</a></li>
                 
             </ul>
