--- a/blogs.html
+++ b/blogs.html
@@ -16,10 +16,10 @@
             <ul>
               <li><a href="https://ermosahid.github.io/website-lunch/index.html#header">Home</a></li>
 
-                <li><a href="file:///D:/my%20folder/portfolio/portfilo/index.html#about">About</a></li>
-                <li><a href="file:///D:/my%20folder/portfolio/portfilo/index.html#services">Work Experience</a></li>
-                <li><a href="file:///D:/my%20folder/portfolio/portfilo/index.html#Portfolio">Projects</a></li>
-                <li><a href="file:///D:/my%20folder/portfolio/portfilo/index.html#Contact">Contact</a></li>
+                <li><a href="https://ermosahid.github.io/website-lunch/index.html#about">About</a></li>
+                <li><a href="https://ermosahid.github.io/website-lunch/index.html#services">Work Experience</a></li>
+                <li><a href="https://ermosahid.github.io/website-lunch/index.html#Portfolio">Projects</a></li>
+                <li><a href="https://ermosahid.github.io/website-lunch/index.html#Contact">Contact</a></li>
                 <li><a href="https://ermosahid.github.io/website-lunch/blogs.html">Blogs</a></li> <!-- Active link for Blogs -->
             </ul>
         </nav>
