--- a/blogs.html
+++ b/blogs.html
@@ -16,11 +16,11 @@
             <ul>
               <li><a href="https://ermosahid.github.io/website-lunch/index.html#header">Home</a></li>
 
-                <li><a href="https://ermosahid.github.io/website-lunch/index.html#about">About</a></li>
-                <li><a href="https://ermosahid.github.io/website-lunch/index.html#services">Work Experience</a></li>
-                <li><a href="https://ermosahid.github.io/website-lunch/index.html#Portfolio">Projects</a></li>
-                <li><a href="https://ermosahid.github.io/website-lunch/index.html#Contact">Contact</a></li>
-                <li><a href="https://ermosahid.github.io/website-lunch/blogs.html">Blogs</a></li> <!-- Active link for Blogs -->
+                <li><a href="https://ermosahid.github.io/portfolio/index.html#about">About</a></li>
+                <li><a href="https://ermosahid.github.io/portfolio/index.html#services">Work Experience</a></li>
+                <li><a href="https://ermosahid.github.io/portfolio/index.html#Portfolio">Projects</a></li>
+                <li><a href="https://ermosahid.github.io/portfolio/index.html#Contact">Contact</a></li>
+                <li><a href="https://ermosahid.github.io/portfolio/blogs.html">Blogs</a></li> <!-- Active link for Blogs -->
             </ul>
         </nav>
     </div>
