--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 
                     </p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://github.com/ErMosahid/HR-Dashbord"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
 
