--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <div class="layer">
                     <h3>logistics dashbord</h3>
                     <p>A logistics dashboard is a visual tool that provides key insights into supply chain operations. It typically includes metrics like shipment status, delivery performance, inventory levels, order accuracy, transportation costs, and fleet performance. The goal is to improve decision-making, streamline operations, and enhance efficiency.</p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://github.com/ErMosahid/gaaubesi"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
