--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
                
                 <h4>kathmandu, Nepal</h4>
                 <h4>2023-current</h4><br>
-                <p>•Conducted detailed profit and loss analysis for 400 branches, identifying key cost drivers and contributing to a 15% reduction in operational expenses across multiple locations.</p>
+                <p>Conducted detailed profit and loss analysis for 400 branches, identifying key cost drivers and contributing to a 15% reduction in operational expenses across multiple locations.</p>
                 <br>
-                <p>•Collaborated with operations teams to optimize delivery routes, resulting in a 10% reduction in fuel costs and a 15% improvement in on-time deliveries across 400 branches.</p>
+                <p>Collaborated with operations teams to optimize delivery routes, resulting in a 10% reduction in fuel costs and a 15% improvement in on-time deliveries across 400 branches.</p>
                 <br>
-                <p>•Analyzed delivery order trends and customer feedback to improve service efficiency and reduce late deliveries and peak time bottlenecks.</p>
+                <p>Analyzed delivery order trends and customer feedback to improve service efficiency and reduce late deliveries and peak time bottlenecks.</p>
                 <br>
-                <p>•Evaluated performance metrics of over 1000 employees, enabling a 20% improvement in productivity through targeted recommendations and operational adjustments.</p>
+                <p>Evaluated performance metrics of over 1000 employees, enabling a 20% improvement in productivity through targeted recommendations and operational adjustments.</p>
                 
 
                 <a href="#">Learn More</a>
